fix: increase width of move-col-tmNumber for better alignment in MoveTable

--- a/src/App.css
+++ b/src/App.css
@@ -331,7 +331,7 @@
 }
 
 .move-col-tmNumber {
-  width: 40px;
+  width: 45px;
 }
 
 .move-col-learnMethod {
